Fix line height of header on mobile.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -914,6 +914,7 @@ h2.location-bottom-left {
 
   .header-title {
     font-size: 10vw;
+    line-height: 9.3vw;
   }
 
   .icon-primary {
